[package]
name = "regex_findall"
version = "0.1.0"
authors = ["tsoernes"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "4.2.0"
regex = "1.5"
serde_json = "1.0"
serde = "*"
rayon = "1.5"
time = "*"
glob = "*"
tokenizers = "*"
