[package]
name = "regex_findall"
version = "0.2.0"
authors = ["tsoernes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parquet = "4.2.0"
parquet = "*"
# regex = "1.5"
regex = "*"
# serde_json = "1.0"
serde_json = "*"
serde = "*"
# rayon = "1.5"
rayon = "*"
time = "*"
glob = "*"
tokenizers = "*"
