[package]
name = "regex_findall"
version = "0.2.0"
authors = ["tsoernes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "51.0.0"
regex = "1.10.4"
serde_json = "1.0.116"
serde = "1.0.200"
rayon = "1.10.0"
time = "0.3.36"
